Move non-chart info inside chart divs so it'll be replaced when JS runs

--- a/app/views/dashboard/dashboard/index.html.erb
+++ b/app/views/dashboard/dashboard/index.html.erb
@@ -33,27 +33,25 @@
     <% end %>
     <%= tag.section id: "top-states-by-items-shipped", class: "card-body float-left m-2" do %>
       <h5 class="card-title">Top States by Items Shipped</h5>
-        <div id="states-piechart"></div>
+        <div id="states-piechart"><ul>
+          <% @merchant.top_states_by_items_shipped(3).each do |item| %>
+            <li><%= item.state %>: <%= item.quantity %></li>
+          <% end %>
+        </ul></div>
         <script type="text/javascript">
           <%= render partial: 'charts/pie', formats: [:js], locals: {chartname: 'states', columns: @merchant.top_states_by_items_shipped(3).to_pie_columns(state: :quantity)} %>
         </script>
-      <ul>
-        <% @merchant.top_states_by_items_shipped(3).each do |item| %>
-          <li><%= item.state %>: <%= item.quantity %></li>
-        <% end %>
-      </ul>
     <% end %>
     <%= tag.section id: "top-cities-by-items-shipped", class: "card-body float-left m-2" do %>
       <h5 class="card-title">Top Cities by Items Shipped</h5>
-        <div id="cities-piechart"></div>
+        <div id="cities-piechart"><ul>
+          <% @merchant.top_cities_by_items_shipped(3).each do |item| %>
+            <li><%= item.city %>, <%= item.state %>: <%= item.quantity %></li>
+          <% end %>
+        </ul></div>
         <script type="text/javascript">
           <%= render partial: 'charts/pie', formats: [:js], locals: {chartname: 'cities', columns: @merchant.top_cities_by_items_shipped(3).to_pie_columns(city: :quantity)} %>
         </script>
-      <ul>
-        <% @merchant.top_cities_by_items_shipped(3).each do |item| %>
-          <li><%= item.city %>, <%= item.state %>: <%= item.quantity %></li>
-        <% end %>
-      </ul>
     <% end %>
     <%= tag.section id: "top-users-by-money-spent", class: "card-body float-left m-2" do %>
       <h5 class="card-title">Top Users by Money Spent</h5>
