--- a/app/views/merchants/index.html.erb
+++ b/app/views/merchants/index.html.erb
@@ -1,6 +1,18 @@
 <h1>Merchant List</h1>
 <%= tag.div class: "card" do %>
   <%= tag.section class: "statistics card-body float-left m-4" do %>
+    <%= tag.section id: "sitewide-revenue", class: "card-body m-2" do %>
+      <h5 class="card-title">Sitewide Revenue</h5>
+      <div id="sitewideSales-piechart"></div>
+      <script type="text/javascript">
+        <%= render partial: 'charts/pie',
+                   formats: [:js],
+                   locals: {chartname: 'sitewideSales',
+                            chartdata: 'money',
+                            columns: @sitewide_sales.to_pie_columns(merchant_name: :sales)
+                           } %>
+      </script>
+    <% end %>
     <%= tag.section id: "top-three-merchants-revenue", class: "card-body float-left m-2" do %>
       <h5 class="card-title">Top Merchants by Revenue</h5>
       <ul>
