Refactor pie chart formatting to handle different kinds of data

--- a/app/views/charts/_pie.js.erb
+++ b/app/views/charts/_pie.js.erb
@@ -18,6 +18,14 @@ var pie<%= chartname.capitalize %> = c3.generate({
   }
 });
 
+<% if chartdata == 'orders'
+  @format_string = '${value} orders'
+elsif chartdata == 'money'
+  @format_string = '\$${value}'
+else
+  @format_string = '${value}'
+end %>
+
 function orderFormat(value, ratio, id, index = null){
-  return `${value} orders`;
+  return `<%= raw(@format_string) %>`;
 }
